Fixed: Leave list calendar button alignment issue.

--- a/php/orangehrm/symfony/plugins/orangehrmCoreLeavePlugin/web/css/viewLeaveListSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmCoreLeavePlugin/web/css/viewLeaveListSuccess.css
@@ -145,7 +145,6 @@ form#frmFilterLeave input.ohrm_datepicker{
 }
 
 form#frmFilterLeave input.calendarBtn{
-    margin-left: 15px !important;
     display:block;
     float: left;  
     margin-top: 9px;
